--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@flk/events": "^2.0.2",
     "@flk/supportive-is": "^1.3.0",
     "@mongez/reinforcements": "^2.2.3",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +22,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "reinforcements": "^1.2.3",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -31,7 +37,8 @@
     "user": "src/reactor/user.js",
     "shared": "src/shared",
     "reactor": "src/reactor",
-    "modules": "src/modules"
+    "modules": "src/modules",
+    "layout": "src/shared/components/layout/Layout.js"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +59,11 @@
     ]
   },
   "devDependencies": {
-    "link-module-alias": "^1.2.0"
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "link-module-alias": "^1.2.0",
+    "typescript": "^4.8.4"
   }
 }
